--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -191,6 +191,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Inventory(BaseModel):\n",
+    "    products: list[Product] = Field(description=\"This is the list of products\")\n",
+    "    \n",
+    "output_parser = JsonOutputParser(pydantic_object=Inventory)\n",
+    "\n",
+    "chat_prompt_template = ChatPromptTemplate(\n",
+    "    messages = [\n",
+    "        (\"system\", \"You are a helpful AI assistant.  \\nFormatting Instructions: {format_instructions}\"),\n",
+    "        (\"human\", \"Can you create 5 fictitious products for the following category: {category}\")\n",
+    "])\n",
+    "                                     \n",
+    "\n",
+    "chain = chat_prompt_template | chat_llm | output_parser\n",
+    "chain.invoke({\n",
+    "    \"category\": \"Electronics\",\n",
+    "    \"format_instructions\": output_parser.get_format_instructions()\n",
+    "    })"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -288,9 +313,12 @@
     "embeddings_model = OpenAIEmbeddings()\n",
     "output_parser = StrOutputParser()\n",
     "\n",
+    "loader = PyPDFLoader(\"my_man_jeeves_story1.pdf\")\n",
+    "documents = loader.load()\n",
+    "\n",
     "db = FAISS.from_documents(documents, embeddings_model)\n",
     "\n",
-    "query = \"What is Corky's profession ?\"\n",
+    "query = \"Who is Jeeves ?\"\n",
     "docs = db.similarity_search(query, k=4)\n",
     "\n",
     "context = \"\\n\\n\".join([doc.page_content for doc in docs])\n",
@@ -343,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "toolkit = load_tools([\"serpapi\"], llm=chat_llm)\n",
+    "toolkit = load_tools([\"serpapi\", \"llm_math\"], llm=chat_llm)\n",
     "agent = initialize_agent(toolkit, chat_llm, agent=\"zero-shot-react-description\", verbose=True, return_intermediate_steps=True)\n",
     "\n",
     "response = agent({\"input\":\"How many gold medals did US win in 2024 Olympics ?\"})"
