--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "toolkit = load_tools([\"serpapi\", \"llm_math\"], llm=chat_llm)\n",
+    "toolkit = load_tools([\"serpapi\"], llm=chat_llm)\n",
     "agent = initialize_agent(toolkit, chat_llm, agent=\"zero-shot-react-description\", verbose=True, return_intermediate_steps=True)\n",
     "\n",
     "response = agent({\"input\":\"How many gold medals did US win in 2024 Olympics ?\"})"
